# grok-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md
.github/workflows/: npm-publish.yml  release-macos.yml  release.yml  upstream-policy.yml
Formula/: grok-cli.rb
crates/codegen/xai-grok-agent/src/prompt/: prompt_encrypted.rs
crates/codegen/xai-grok-agent/templates/: prompt.md  subagent_prompt.md
crates/codegen/xai-grok-config/src/: paths.rs
crates/codegen/xai-grok-http/: Cargo.toml
crates/codegen/xai-grok-http/src/: lib.rs
crates/codegen/xai-grok-mcp/: Cargo.toml
crates/codegen/xai-grok-pager/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-bin/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager/src/: completions_cmd.rs
crates/codegen/xai-grok-pager/src/app/: cli.rs  mod.rs  screen_mode_relaunch.rs
crates/codegen/xai-grok-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/xai-grok-update/tests/: test_subprocess.rs
crates/codegen/xai-grok-version/: Cargo.toml  build.rs  product_version_for_build.rs
crates/codegen/xai-grok-version/src/: lib.rs
docs/: README.md  agent-harness.md  agent-harness.zh-CN.md  telemetry.md  telemetry.zh-CN.md  upstream-sync.md  upstream-sync.zh-CN.md
packaging/: README.md  README.zh-CN.md  VERSION
packaging/npm/grok-cli/: README.md  package.json
packaging/npm/grok-cli-darwin-arm64/: README.md  package.json
packaging/npm/grok-cli-darwin-x64/: README.md  package.json
packaging/scripts/: assemble-npm.js  extract-changelog.js  merge-upstream.sh  publish-npm.js  sync-version.js  update-formula.js  verify-upstream-policy.sh
