[package]
license = "Apache-2.0"
name = "xai-grok-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the grok CLI."

[dependencies]
# The workspace disables reqwest's default features. Re-enable native system
# proxy discovery here so every shared HTTP client honors macOS Network proxy
# settings when no HTTP_PROXY/HTTPS_PROXY environment variable is present.
reqwest = { workspace = true, features = ["blocking", "system-proxy"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
xai-grok-auth = { workspace = true, features = ["middleware"] }
xai-grok-sampler = { path = "../xai-grok-sampler" }
xai-grok-telemetry = { workspace = true }
xai-grok-version = { workspace = true }
xai-grok-workspace = { workspace = true }

[lints]
workspace = true
